logs/2_makefile.log
[ 14%] Building CXX object unit_tests/lib/googletest/CMakeFiles/gtest.dir/src/gtest-all.cc.o
[ 28%] Linking CXX static library ../../../lib/libgtest.a
[ 28%] Built target gtest
[ 42%] Building CXX object unit_tests/lib/googletest/CMakeFiles/gtest_main.dir/src/gtest_main.cc.o
[ 57%] Linking CXX static library ../../../lib/libgtest_main.a
[ 57%] Built target gtest_main
[ 71%] Building CXX object unit_tests/CMakeFiles/unit_tests.dir/__/simpleString.cpp.o
[ 85%] Building CXX object unit_tests/CMakeFiles/unit_tests.dir/simpleStringTests.cpp.o
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp: In member function ‘virtual void SimpleStringTester_substr_expectedPartOfTextReturned_Test::TestBody()’:
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:251:48: error: ‘const class SimpleString’ has no member named ‘substr’
  251 |     const SimpleString partOfText = entireText.substr(startingPosition);
      |                                                ^~~~~~
In file included from /tmp/tmpg6b5nzax/student/unit_tests/lib/googletest/include/gtest/gtest.h:71,
                 from /tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:3:
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp: In member function ‘virtual void SimpleStringTester_compareTextWithCases_expectedComparingWorks_Test::TestBody()’:
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:281:28: error: ‘const class SimpleString’ has no member named ‘compare’
  281 |         ASSERT_EQ(0, text1.compare(text2));
      |                            ^~~~~~~
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:288:28: error: ‘const class SimpleString’ has no member named ‘compare’
  288 |         ASSERT_GT(0, text1.compare(text2));
      |                            ^~~~~~~
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:294:28: error: ‘const class SimpleString’ has no member named ‘compare’
  294 |         ASSERT_LT(0, text1.compare(text2));
      |                            ^~~~~~~
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp: In member function ‘virtual void SimpleStringTester_compareTextWithoutCases_expectedComparingWorks_Test::TestBody()’:
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:303:28: error: ‘const class SimpleString’ has no member named ‘compare’
  303 |         ASSERT_EQ(0, text1.compare(text2, /*case_sensitive=*/false));
      |                            ^~~~~~~
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:310:28: error: ‘const class SimpleString’ has no member named ‘compare’
  310 |         ASSERT_GT(0, text1.compare(text2, /*case_sensitive=*/false));
      |                            ^~~~~~~
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:316:28: error: ‘const class SimpleString’ has no member named ‘compare’
  316 |         ASSERT_LT(0, text1.compare(text2, /*case_sensitive=*/false));
      |                            ^~~~~~~
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp: At global scope:
/tmp/tmpg6b5nzax/student/unit_tests/simpleStringTests.cpp:29:6: warning: the program should also define ‘void operator delete [](void*, std::size_t)’ [-Wsized-deallocation]
   29 | void operator delete[](void* memory) noexcept
      |      ^~~~~~~~
make[3]: *** [unit_tests/CMakeFiles/unit_tests.dir/build.make:76: unit_tests/CMakeFiles/unit_tests.dir/simpleStringTests.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:345: unit_tests/CMakeFiles/unit_tests.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:352: unit_tests/CMakeFiles/unit_tests.dir/rule] Error 2
make: *** [Makefile:260: unit_tests] Error 2
